--- a/DNDMapMaker/MapDesignWindow.xaml
+++ b/DNDMapMaker/MapDesignWindow.xaml
@@ -35,7 +35,7 @@
 		</Grid>
 
 		<!-- DEBUG LOG -->
-		<ScrollViewer HorizontalAlignment="Left" Width="300" VerticalScrollBarVisibility="Hidden">
+		<ScrollViewer Name="svDebug" HorizontalAlignment="Left" Width="300" VerticalScrollBarVisibility="Hidden">
 			<Label Foreground="Red" Name="lblDebug" IsEnabled="False" Visibility="Hidden"></Label>
 		</ScrollViewer>
 
