--- a/DNDMapMaker/MapDesignWindow.xaml
+++ b/DNDMapMaker/MapDesignWindow.xaml
@@ -36,6 +36,57 @@
 					</Grid.RowDefinitions>
 					<Button Content="Add Resource" Click="Button_Click"></Button>
 				</Grid>
+				
+				<!-- properties window -->
+				<Grid Grid.Column="1">
+					<ScrollViewer Background="Silver">
+						<Grid>
+							<StackPanel Name="pnlProperties">
+								<!--<Label>Label one</Label>
+								<Label>Label two</Label>-->
+							
+								<!-- width and height -->
+								<StackPanel Orientation="Horizontal">
+									<Label Padding="2">width</Label>
+									<TextBox Name="txtScaleX" Padding="2" Width="40"/>
+								
+									<Label Padding="2">height</Label>
+									<TextBox Name="txtScaleY" Padding="2" Width="40"/>
+
+									<Button Name="btnSetScale" Padding="2" Margin="10,0,0,0" Click="btnSetScale_Click">Set</Button>
+								</StackPanel>
+							
+								<!-- scale -->
+								<StackPanel Orientation="Horizontal">
+									<Label Padding="2">scale</Label>
+									<TextBox Name="txtScale" Padding="2" Width="40"/>
+
+									<Button Name="btnSetScaleMultiplier" Padding="2" Margin="10,0,0,0" Click="btnSetScaleMultiplier_Click">Set</Button>
+									<Label Padding="2" Foreground="#666666">(Decimal multiplier)</Label>
+								</StackPanel>
+							
+								<!-- z-index -->
+								<StackPanel Orientation="Horizontal">
+									<Label Padding="2">z-index</Label>
+									<TextBox Name="txtZIndex" Padding="2" Width="40"/>
+
+									<Button Name="btnSetZ" Padding="2" Margin="10,0,0,0" Click="btnSetZ_Click">Set</Button>
+									<Label Padding="2" Foreground="#666666">(1-99)</Label>
+								</StackPanel>
+
+								<!-- rotation -->
+								<StackPanel Orientation="Horizontal">
+									<Label Padding="2">rotation</Label>
+									<TextBox Name="txtAngle" Padding="2" Width="40"/>
+
+									<Button Name="btnSetAngle" Padding="2" Margin="10,0,0,0" Click="btnSetAngle_Click">Set</Button>
+									<Label Padding="2" Foreground="#666666">(0-360)</Label>
+								</StackPanel>
+
+							</StackPanel>
+						</Grid>
+					</ScrollViewer>
+				</Grid>
 			</Grid>
 		</Grid>
 
@@ -50,7 +101,7 @@
 
 			<ListBox Grid.Row="0" Name="lbRes" SelectionChanged="lbRes_SelectionChanged"></ListBox>
 			
-			<ListBox Grid.Row="1" Name="lbEntities"></ListBox>
+			<ListBox Grid.Row="1" Name="lbEntities" SelectionChanged="lbEntities_SelectionChanged"></ListBox>
 			
 			<Rectangle Grid.Row="2" Name="rPreviewPane" Panel.ZIndex="2" Stroke="Gray" StrokeThickness="1"></Rectangle>
 			<Label Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Panel.ZIndex="1">Preview Pane</Label>
