--- a/DNDMapMaker/MapDesignWindow.xaml
+++ b/DNDMapMaker/MapDesignWindow.xaml
@@ -3,10 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Map Design" Height="600" Width="800">
 	<Grid>
+		
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="250" />
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
+
+		<MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="mediaElement1" VerticalAlignment="Top" />
 
 		<!-- map/bottom -->
 		<Grid Grid.Column="1">
@@ -34,17 +37,24 @@
 						<RowDefinition Height="auto" />
 						<RowDefinition Height="auto" />
 					</Grid.RowDefinitions>
+					<StackPanel>
 					<Button Content="Add Resource" Click="Button_Click"></Button>
+						<StackPanel Orientation="Horizontal">
+							<Label Padding="2">Grid Size: </Label>
+							<Label Padding="2">X:</Label>
+							<TextBox Name="txtSquaresX" Padding="2" Width="25"/>
+							<Label Padding="2">Y:</Label>
+							<TextBox Name="txtSquaresY" Padding="2" Width="25"/>
+							<Button Name="btnSetSquares" Padding="2" Margin="10,0,0,0" Click="btnSetSquares_Click">Set</Button>
+						</StackPanel>
+					</StackPanel>
 				</Grid>
 				
 				<!-- properties window -->
 				<Grid Grid.Column="1">
 					<ScrollViewer Background="Silver">
 						<Grid>
-							<StackPanel Name="pnlProperties">
-								<!--<Label>Label one</Label>
-								<Label>Label two</Label>-->
-							
+							<StackPanel Name="pnlProperties">							
 								<!-- width and height -->
 								<StackPanel Orientation="Horizontal">
 									<Label Padding="2">width</Label>
