--- a/DNDMapMaker/MapDesignWindow.xaml
+++ b/DNDMapMaker/MapDesignWindow.xaml
@@ -1,129 +1,170 @@
 ﻿<Window x:Class="DNDMapMaker.MapDesignWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Map Design" Height="600" Width="800">
+        Title="Map Design" Height="700" Width="900">
 	<Grid>
+		<!-- world -->
+		<Canvas Panel.ZIndex="10" Background="White" Name="cnvsWorld" MouseDown="cnvsWorld_MouseDown" MouseMove="cnvsWorld_MouseMove" MouseUp="cnvsWorld_MouseUp" MouseWheel="cnvsWorld_MouseWheel"></Canvas>
+
+		<!-- MAP PLAY -->
+		<Grid Name="MapPlayGrid" Panel.ZIndex="9">
+		</Grid>
 		
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="250" />
-			<ColumnDefinition Width="*" />
-		</Grid.ColumnDefinitions>
+		<!-- MAP DESIGN -->
+		<Grid Name="MapDesignGrid" Panel.ZIndex="11" Opacity=".9">
 
-		<MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="mediaElement1" VerticalAlignment="Top" />
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="250" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
 
-		<!-- map/bottom -->
-		<Grid Grid.Column="1">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="*" />
-				<RowDefinition Height="200" />
-			</Grid.RowDefinitions>
+			<MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="mediaElement1" VerticalAlignment="Top" />
 
-			<!-- world -->
-			<Canvas Background="White" Name="cnvsWorld" MouseDown="cnvsWorld_MouseDown" MouseMove="cnvsWorld_MouseMove" MouseUp="cnvsWorld_MouseUp" MouseWheel="cnvsWorld_MouseWheel"></Canvas>
+			<!-- map/bottom -->
+			<Grid Grid.Column="1">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="*" />
+					<RowDefinition Height="200" />
+				</Grid.RowDefinitions>
 
-			<!-- bottom panel -->
-			<Grid Grid.Row="1" Background="PaleTurquoise">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="180"/>
-					<ColumnDefinition Width="*" />
-				</Grid.ColumnDefinitions>
-				
-				<Grid Grid.Column="0">
-					<StackPanel>
-					<Button Content="Add Resource" Click="Button_Click"></Button>
-						<StackPanel Orientation="Horizontal">
-							<Label Padding="2">Grid Size - </Label>
-							<Label Padding="2">X:</Label>
-							<TextBox Name="txtSquaresX" Padding="2" Width="25"/>
-							<Label Padding="2">Y:</Label>
-							<TextBox Name="txtSquaresY" Padding="2" Width="25"/>
-							<Button Name="btnSetSquares" Padding="2" Margin="10,0,0,0" Click="btnSetSquares_Click">Set</Button>
-						</StackPanel>
-						<StackPanel Orientation="Horizontal">
-							<Label Padding="2">Map Name:</Label>
-							<TextBox Name="txtMapName" Padding="2" Width="100"/>
-						</StackPanel>
-						<Button Name="btnSaveMap" Click="btnSaveMap_Click">Save Map</Button>
-						<ScrollViewer>
-							<ListBox Height="95" Name="lbAvailableMaps" SelectionChanged="lbAvailableMaps_SelectionChanged">
-								
-							</ListBox>
-						</ScrollViewer>
-						<Button Name="btnLoadMap" Click="btnLoadMap_Click">Load Map</Button>
-					</StackPanel>
-				</Grid>
-				
-				<!-- properties window -->
-				<Grid Grid.Column="1">
-					<ScrollViewer Background="Silver">
-						<Grid>
-							<StackPanel Name="pnlProperties">							
-								<!-- width and height -->
-								<StackPanel Orientation="Horizontal">
-									<Label Padding="2">width</Label>
-									<TextBox Name="txtScaleX" Padding="2" Width="40"/>
-								
-									<Label Padding="2">height</Label>
-									<TextBox Name="txtScaleY" Padding="2" Width="40"/>
 
-									<Button Name="btnSetScale" Padding="2" Margin="10,0,0,0" Click="btnSetScale_Click">Set</Button>
-								</StackPanel>
-							
-								<!-- scale -->
-								<StackPanel Orientation="Horizontal">
-									<Label Padding="2">scale</Label>
-									<TextBox Name="txtScale" Padding="2" Width="40"/>
+				<!-- bottom panel -->
+				<Grid Grid.Row="1" Background="White">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="180"/>
+						<ColumnDefinition Width="230" />
+						<ColumnDefinition Width="230" />
+					</Grid.ColumnDefinitions>
 
-									<Button Name="btnSetScaleMultiplier" Padding="2" Margin="10,0,0,0" Click="btnSetScaleMultiplier_Click">Set</Button>
-									<Label Padding="2" Foreground="#666666">(Decimal multiplier)</Label>
-								</StackPanel>
-							
-								<!-- z-index -->
-								<StackPanel Orientation="Horizontal">
-									<Label Padding="2">z-index</Label>
-									<TextBox Name="txtZIndex" Padding="2" Width="40"/>
-
-									<Button Name="btnSetZ" Padding="2" Margin="10,0,0,0" Click="btnSetZ_Click">Set</Button>
-									<Label Padding="2" Foreground="#666666">(1-99)</Label>
-								</StackPanel>
-
-								<!-- rotation -->
-								<StackPanel Orientation="Horizontal">
-									<Label Padding="2">rotation</Label>
-									<TextBox Name="txtAngle" Padding="2" Width="40"/>
-
-									<Button Name="btnSetAngle" Padding="2" Margin="10,0,0,0" Click="btnSetAngle_Click">Set</Button>
-									<Label Padding="2" Foreground="#666666">(0-360)</Label>
-								</StackPanel>
-
+					<!-- map properties window -->
+					<Grid Grid.Column="0">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="25" />
+							<RowDefinition Height="*" />
+							<RowDefinition Height="71" />
+						</Grid.RowDefinitions>
+						
+						<Label Grid.Row="0">Map Properties</Label>
+						<StackPanel Grid.Row="1">
+							<Button Content="Add Selected Resource" Click="Button_Click"></Button>
+							<StackPanel Orientation="Horizontal">
+								<Label Padding="2">Grid Size -</Label>
+								<Label Padding="2">X:</Label>
+								<TextBox Name="txtSquaresX" Padding="2" Width="25"/>
+								<Label Padding="2">Y:</Label>
+								<TextBox Name="txtSquaresY" Padding="2" Width="25"/>
+								<Button Name="btnSetSquares" Padding="2" Margin="10,0,0,0" Click="btnSetSquares_Click">Set</Button>
 							</StackPanel>
-						</Grid>
-					</ScrollViewer>
+							<StackPanel Orientation="Horizontal">
+								<Label Padding="2">Grid Color:</Label>
+								<TextBox Name="txtGridColor" Padding="2" Width="60" Text="Black"/>
+								<Button Name="btnSetGridColor" Padding="2" Margin="10,0,0,0" Click="btnSetGridColor_Click">Set</Button>
+							</StackPanel>
+							<Button Height="40" Background="LightGreen" Click="Button_Click_1">Play Map!</Button>
+						</StackPanel>
+						<StackPanel Grid.Row="2">
+							<StackPanel Orientation="Horizontal">
+								<Label Padding="2">Map Name:</Label>
+								<TextBox Name="txtMapName" Padding="2" Width="100"/>
+							</StackPanel>
+							<Button Name="btnSaveMap" Click="btnSaveMap_Click" Height="50">Save Map</Button>
+						</StackPanel>
+					</Grid>
+
+					<!-- resource properties window -->
+					<Grid Grid.Column="1">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="25" />
+							<RowDefinition Height="*" />
+						</Grid.RowDefinitions>
+						
+						<Label Grid.Row="0">Resource Properties</Label>
+						<ScrollViewer Grid.Row="1" Background="White" BorderBrush="Black" BorderThickness="1">
+							<Grid>
+								<StackPanel Name="pnlProperties">
+									<!-- width and height -->
+									<StackPanel Orientation="Horizontal">
+										<Label Padding="2">width</Label>
+										<TextBox Name="txtScaleX" Padding="2" Width="40"/>
+
+										<Label Padding="2">height</Label>
+										<TextBox Name="txtScaleY" Padding="2" Width="40"/>
+
+										<Button Name="btnSetScale" Padding="2" Margin="10,0,0,0" Click="btnSetScale_Click">Set</Button>
+									</StackPanel>
+
+									<!-- scale -->
+									<StackPanel Orientation="Horizontal">
+										<Label Padding="2">scale</Label>
+										<TextBox Name="txtScale" Padding="2" Width="40"/>
+
+										<Button Name="btnSetScaleMultiplier" Padding="2" Margin="10,0,0,0" Click="btnSetScaleMultiplier_Click">Set</Button>
+										<Label Padding="2" Foreground="#666666">(Decimal multiplier)</Label>
+									</StackPanel>
+
+									<!-- z-index -->
+									<StackPanel Orientation="Horizontal">
+										<Label Padding="2">z-index</Label>
+										<TextBox Name="txtZIndex" Padding="2" Width="40"/>
+
+										<Button Name="btnSetZ" Padding="2" Margin="10,0,0,0" Click="btnSetZ_Click">Set</Button>
+										<Label Padding="2" Foreground="#666666">(1-99)</Label>
+									</StackPanel>
+
+									<!-- rotation -->
+									<StackPanel Orientation="Horizontal">
+										<Label Padding="2">rotation</Label>
+										<TextBox Name="txtAngle" Padding="2" Width="40"/>
+
+										<Button Name="btnSetAngle" Padding="2" Margin="10,0,0,0" Click="btnSetAngle_Click">Set</Button>
+										<Label Padding="2" Foreground="#666666">(0-360)</Label>
+									</StackPanel>
+
+								</StackPanel>
+							</Grid>
+						</ScrollViewer>
+					</Grid>
+
+					<!-- map list -->
+					<Grid Grid.Column="2">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="25" />
+							<RowDefinition Height="*" />
+							<RowDefinition Height="50" />
+						</Grid.RowDefinitions>
+
+						<Label Grid.Row="0">Saved Maps</Label>
+						<ScrollViewer Grid.Row="1">
+							<StackPanel>
+								<ListBox Name="lbAvailableMaps" SelectionChanged="lbAvailableMaps_SelectionChanged"></ListBox>
+							</StackPanel>
+						</ScrollViewer>
+						<Button Grid.Row="2" Name="btnLoadMap" Click="btnLoadMap_Click" Height="50">Load Map</Button>
+					</Grid>
 				</Grid>
 			</Grid>
+
+			<!-- Left col -->
+			<Grid Grid.Column="0" Background="Silver">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="*" />
+					<RowDefinition Height="*" />
+					<RowDefinition Height="200" />
+				</Grid.RowDefinitions>
+
+
+				<ListBox Grid.Row="0" Name="lbRes" SelectionChanged="lbRes_SelectionChanged"></ListBox>
+
+				<ListBox Grid.Row="1" Name="lbEntities" SelectionChanged="lbEntities_SelectionChanged"></ListBox>
+
+				<Rectangle Grid.Row="2" Name="rPreviewPane" Panel.ZIndex="2" Stroke="Gray" StrokeThickness="1"></Rectangle>
+				<Label Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Panel.ZIndex="1">Preview Pane</Label>
+			</Grid>
+
+			<!-- DEBUG LOG -->
+			<ScrollViewer Name="svDebug" HorizontalAlignment="Left" Width="300" VerticalScrollBarVisibility="Hidden" IsHitTestVisible="False">
+				<Label Foreground="Red" Name="lblDebug" IsEnabled="False" Visibility="Hidden" IsHitTestVisible="False"></Label>
+			</ScrollViewer>
 		</Grid>
-
-		<!-- Left col -->
-		<Grid Grid.Column="0" Background="Silver">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="*" />
-				<RowDefinition Height="*" />
-				<RowDefinition Height="200" />
-			</Grid.RowDefinitions>
-			
-
-			<ListBox Grid.Row="0" Name="lbRes" SelectionChanged="lbRes_SelectionChanged"></ListBox>
-			
-			<ListBox Grid.Row="1" Name="lbEntities" SelectionChanged="lbEntities_SelectionChanged"></ListBox>
-			
-			<Rectangle Grid.Row="2" Name="rPreviewPane" Panel.ZIndex="2" Stroke="Gray" StrokeThickness="1"></Rectangle>
-			<Label Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Panel.ZIndex="1">Preview Pane</Label>
-		</Grid>
-		
-		<!-- DEBUG LOG -->
-		<ScrollViewer Name="svDebug" HorizontalAlignment="Left" Width="300" VerticalScrollBarVisibility="Hidden" IsHitTestVisible="False">
-			<Label Foreground="Red" Name="lblDebug" IsEnabled="False" Visibility="Hidden" IsHitTestVisible="False"></Label>
-		</ScrollViewer>
-
 	</Grid>
 </Window>
